<resources>
    <string name="app_name">Android-Studio-tut1</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click To Login</string>
    <string name="click_to_register">Click To Register</string>
    <string name="logout">Logout</string>
    <string name="school_name">School Name</string>
    <string name="degree">Degree</string>
    <string name="working_country">Working Country</string>
    <string name="working_city">Working City</string>
    <string name="phone_number">Phone Number</string>
    <string name="social_media_account">Social Media Account (Optional)</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="school_registration_year">School Registration Year</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="profile">Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="text">Text</string>
    <string name="send">Send</string>
    <string name="create_announcement">Create Announcement</string>
    <string name="go_back">Go Back</string>
    <string name="title">Title</string>
    <string name="show_announcements">Show Announcements</string>
    <string name="edit_profile">Edit Profile</string>
</resources>