<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:padding="40dp"
    tools:context=".CreateAnnouncementActivity">


    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="Create Announcement"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/announcement_text"
            android:hint="@string/text"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send"
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_back"
        android:text="@string/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>